# mc-assets

./: .gitignore  Makefile  README.md  pyproject.toml  update-assets.sh
.github/workflows/: ci.yml  release.yml
src/minecraft_assets/: __init__.py
tests/: test_assets.py  test_update_assets.py
